dvbsuboverlay: properly force end-of-display-set

... which is upon receiving new data with different PTS spec-wise,
or optionally upon each packet of subtitle data if desired by property.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=669310

Conflicts:

	gst/dvbsuboverlay/gstdvbsuboverlay.c